applications/shell/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: shell
  labels:
    policy.fraguinha.com/defaults: enabled
